[gd_scene load_steps=4 format=3 uid="uid://8bbkmf7cik0f"]

[ext_resource type="Script" path="res://Scripts/Menu/credits.gd" id="1_f5h8y"]
[ext_resource type="AudioStream" uid="uid://ca1jsuhlls2kl" path="res://Assets/Audio/Music/Menu/Hiding Your Reality.mp3" id="2_v3mst"]
[ext_resource type="Script" path="res://Scripts/MainMenuMusicPlayer.gd" id="3_1e27s"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5h8y")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] Credits:

Evert Mäkinen
Altti Äyräs

freesound.org

\"Cognitive Dissonance\", \"El Magicia\", \"Harmful or Fatal\", \"The Whip (Extended Version)\", \"Hiding Your Reality\"
Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 3.0
http://creativecommons.org/licenses/by/3.0/"

[node name="BackButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 115.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="BackButtonMargin"]
layout_mode = 2
focus_neighbor_right = NodePath(".")
text = "Back to menu"

[node name="MainMenuMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v3mst")
bus = &"Music"
script = ExtResource("3_1e27s")

[connection signal="pressed" from="BackButtonMargin/BackButton" to="." method="_on_back_button_pressed"]
